--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -16,6 +16,7 @@
         <members>*</members>
         <name>ApexTestSuite</name>
     </types>
+    sforce 
     <types>
         <members>*</members>
         <name>Layout</name>
